--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
+streamlit
+opencv-python-headless
 setuptools==69.0.2
 wheel==0.42.0
+pytesseract
 streamlit==1.29.0
-opencv-python
-opencv-python-headless
 ultralytics==8.1.14
